test_case/rust-lang_rust/35280_238001970.rs

   |
13 |     fn do_something_else<T: Clone>(&self, bar: T); //~ ERROR E0194
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
